flatfish/k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flatfish-backend-ingress
  namespace: hugo-ngowthammatas
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/cluster-issuer: letsencrypt-thgice
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - flatfish-backend.pq46c.icekube.ics.cloud
      secretName: pq46c-backend-tls
  rules:
    - host: flatfish-backend.pq46c.icekube.ics.cloud
      http:
        paths:
          - path: /api/v1
            pathType: ImplementationSpecific
            backend:
              service:
                name: flatfish-backend-service
                port:
                  number: 8080
